<resources>
    <string name="app_name">Cue Connect</string>
    <string name="users">Users</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">New user, tap here to register !</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>

    <string name="invalid_email_id">Please login using Cuelogic email id.</string>
    <string name="google_sign_in_failed">Google Sign In failed, update UI appropriately.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="invalid_users_data">Invalid users data found</string>
    <string name="invalid_user_session">Invalid user session, Please login.</string>
    <string name="message_sent">Message sent</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="create_group">Create Group</string>
    <string name="hint_enter_group_name">Enter Group Name</string>
    <string name="title_group_members">Group Members :</string>
    <string name="button_create">Create</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_group_creation">Error occurred while room creation</string>
    <string name="mute_notifications">Mute Notifications</string>
    <string name="unmute_notifications">Unmute Notifications</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="notification_alert">Notification Alert</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="app_version">Application Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="account">Account</string>
    <string name="lets_get_connected">Let\'s\nget\nConnected</string>
    <string name="login_with_google_account">Login with Google Account</string>
    <string name="no_users_to_create_group">No users selected to create group</string>
    <string name="select_action">Select Action</string>
</resources>
