<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_small"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/create_group"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogHeader"
        android:layout_margin="@dimen/padding_min"
        android:ems="10"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/hint_enter_group_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/headerGroupMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextGroupName"
        android:layout_marginLeft="@dimen/padding_min"
        android:text="@string/title_group_members"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvGroupMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerGroupMembers"
        android:layout_margin="@dimen/padding_min"
        app:layoutManager="LinearLayoutManager" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvGroupMembers"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/buttonCreate"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_create"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</RelativeLayout>