<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_headers_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/profile_bg_color"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_avg"
                android:background="@drawable/circle_other"
                android:src="@drawable/circle_other"
                app:civ_border_color="@color/border"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/text_view_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/text_view_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_avg"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settings_headers_bg"
            android:paddingBottom="@dimen/padding_min"
            android:paddingLeft="@dimen/padding_avg"
            android:paddingRight="@dimen/padding_avg"
            android:paddingTop="@dimen/padding_avg"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/settings_header" />

        <Switch
            android:id="@+id/switchNotificationAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_avg"
            android:text="@string/notification_alert"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_800" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settings_headers_bg"
            android:paddingBottom="@dimen/padding_min"
            android:paddingLeft="@dimen/padding_avg"
            android:paddingRight="@dimen/padding_avg"
            android:paddingTop="@dimen/padding_avg"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/settings_header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_avg">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/text_view_app_version"
                android:text="@string/app_version"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey_800" />

            <TextView
                android:id="@+id/text_view_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/grey_800" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/settings_headers_bg" />

        <TextView
            android:id="@+id/text_view_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_chevron_right_grey_24dp"
            android:padding="@dimen/padding_avg"
            android:text="@string/privacy_policy"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_800" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/settings_headers_bg" />

        <TextView
            android:id="@+id/text_view_terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_chevron_right_grey_24dp"
            android:padding="@dimen/padding_avg"
            android:text="@string/terms_and_conditions"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_800" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/settings_headers_bg"
            android:paddingBottom="@dimen/padding_min"
            android:paddingLeft="@dimen/padding_avg"
            android:paddingRight="@dimen/padding_avg"
            android:paddingTop="@dimen/padding_avg"
            android:text="@string/account"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/settings_header" />

        <Button
            android:id="@+id/button_logout"
            style="?attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout" />
    </LinearLayout>
</ScrollView>